<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/mushroom_image"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_image_not_found_foreground" />

    <EditText
        android:id="@+id/mushroom_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/enter_mushroom_name" />
<!--    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"-->

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/months_harvest" />

    <GridLayout
        android:id="@+id/mushroom_grid_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:columnCount="4"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/january_checkbox"
            android:layout_columnWeight="1"
            android:text="@string/january" />

        <CheckBox
            android:id="@+id/february_checkbox"
            android:layout_columnWeight="1"
            android:text="@string/february" />

        <CheckBox
            android:id="@+id/march_checkbox"
            android:layout_columnWeight="1"
            android:text="@string/march" />

        <CheckBox
            android:id="@+id/april_checkbox"
            android:layout_columnWeight="1"
            android:text="@string/april" />

        <CheckBox
            android:id="@+id/may_checkbox"
            android:layout_columnWeight="1"
            android:text="@string/may" />

        <CheckBox
            android:id="@+id/june_checkbox"
            android:layout_columnWeight="1"
            android:text="@string/june" />

        <CheckBox
            android:id="@+id/july_checkbox"
            android:layout_columnWeight="1"
            android:text="@string/july" />

        <CheckBox
            android:id="@+id/august_checkbox"
            android:layout_columnWeight="1"
            android:text="@string/august" />

        <CheckBox
            android:id="@+id/september_checkbox"
            android:layout_columnWeight="1"
            android:text="@string/september" />

        <CheckBox
            android:id="@+id/october_checkbox"
            android:layout_columnWeight="1"
            android:text="@string/october" />

        <CheckBox
            android:id="@+id/november_checkbox"
            android:layout_columnWeight="1"
            android:text="@string/november" />


        <CheckBox
            android:id="@+id/december_checkbox"
            android:layout_columnWeight="1"
            android:text="@string/december" />

    </GridLayout>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forest_type" />

    <GridLayout
        android:id="@+id/forest_type_edit_grid_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:columnCount="4"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/mixed_edit_checkbox"
            android:layout_columnWeight="1"
            android:text="@string/mixed" />

        <CheckBox
            android:id="@+id/deciduous_edit_checkbox"
            android:layout_columnWeight="1"
            android:text="@string/deciduous" />

        <CheckBox
            android:id="@+id/coniferous_edit_checkbox"
            android:layout_columnWeight="1"
            android:text="@string/coniferous" />

    </GridLayout>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cooking_method" />

    <GridLayout
        android:id="@+id/cooking_method_edit_grid_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:columnCount="4"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/fry_edit_checkbox"
            android:layout_columnWeight="1"
            android:text="@string/fry" />

        <CheckBox
            android:id="@+id/dry_edit_checkbox"
            android:layout_columnWeight="1"
            android:text="@string/dry" />

        <CheckBox
            android:id="@+id/cook_edit_checkbox"
            android:layout_columnWeight="1"
            android:text="@string/cook" />

        <CheckBox
            android:id="@+id/pickle_edit_checkbox"
            android:layout_columnWeight="1"
            android:text="@string/pickle" />

    </GridLayout>

</LinearLayout>